--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ h1 {
 }
 
 #showcase {
-  background: url("../images/p13.jpg") no-repeat center center/cover;
+  background: url("./images/p13.jpg") no-repeat center center/cover;
   height: 100vh;
   width: 100vw;
 }
